--- a/tabscroll/index.html
+++ b/tabscroll/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="tab">
-      <i class="fa fa-angle-left tab-prev"></i>
+      <i class="fa fa-angle-left tab-prev disabled"></i>
       <div class="tab-list">
         <div class="tab-item active">Home</div>
         <div class="tab-item">Popular</div>
@@ -32,6 +32,9 @@
         <div class="tab-item">Idol</div>
         <div class="tab-item">Popular</div>
         <div class="tab-item">Hot</div>
+        <div class="tab-item">Popular</div>
+        <div class="tab-item">Hot</div>
+        <div class="tab-item">test</div>
       </div>
       <i class="fa fa-angle-right tab-next"></i>
     </div>
