--- a/slider/index.html
+++ b/slider/index.html
@@ -29,31 +29,31 @@
       </ul>
       <div class="slider-wrapper">
         <div class="slider-main">
-          <div class="slider-item">
+          <div class="slider-item" data-index="1">
             <img
               src="https://images.unsplash.com/photo-1475809913362-28a064062ccd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
               alt=""
             />
           </div>
-          <div class="slider-item">
+          <div class="slider-item" data-index="2">
             <img
               src="https://images.unsplash.com/photo-1463501810073-6e31c827a9bc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
               alt=""
             />
           </div>
-          <div class="slider-item">
+          <div class="slider-item" data-index="3">
             <img
               src="https://images.unsplash.com/photo-1497752531616-c3afd9760a11?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
               alt=""
             />
           </div>
-          <div class="slider-item">
+          <div class="slider-item" data-index="4">
             <img
               src="https://images.unsplash.com/photo-1425082661705-1834bfd09dca?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1355&q=80"
               alt=""
             />
           </div>
-          <div class="slider-item">
+          <div class="slider-item" data-index="5">
             <img
               src="https://images.unsplash.com/photo-1470093851219-69951fcbb533?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
               alt=""
