--- a/mp3/index.html
+++ b/mp3/index.html
@@ -7,14 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -24,19 +22,20 @@
           <img
             src="https://cdn.dribbble.com/users/3960463/screenshots/14630140/media/c79331860d7ca1b97430a4888617f428.png?compress=1&resize=800x600"
             alt=""
-            class="player-image"
-          />
+            class="player-image" />
           <i class="fa fa-pause player-icon"></i>
+        </div>
+        <div class="name">
+          <h1 class="music-name"></h1>
         </div>
         <div class="progress">
           <input
             type="range"
             id="progress-bar"
             min="0"
-            max=""
+            max="" 
             value="0"
-            class="bar"
-          />
+            class="bar" />
           <audio src="./files/holo.mp3" id="song"></audio>
         </div>
         <div class="player-number">
