--- a/todolist/index.html
+++ b/todolist/index.html
@@ -29,12 +29,13 @@
         <button class="todo-submit" type="submit">Add</button>
       </form>
       <div class="todo-list">
+        
         <!-- <div class="todo-item">
           <span class="todo-text">Learning english</span>
           <i class="fa fa-trash todo-remove" data-value="Learning english"></i>
         </div> -->
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./class-todo.js"></script>
   </body>
 </html>
